src/components/Gif.css
.full-size-gif {
  background-color: rgba(30, 30, 30, 0.95);
  display: grid;
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.full-size-gif img {
  margin: auto;
}

.close-full-size {
  position: fixed;
  width: 100%;
}

.close-full-size button {
  background: none;
  border: none;
  color: inherit;
  float: right;
  font-family: inherit;
  font-size: 2rem;
  font-weight: bold;
  margin-right: 50px;
  margin-top: 20px;
}

.close-full-size button:hover {
  color: #a1a1a1;
  cursor: pointer;
}

.fixed-size-gif:hover {
  cursor: pointer;
}

